# agent-muselab

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_en.md  SECURITY.md  THIRD_PARTY_LICENSES.md  constitution.md  constitution_zh.md  docker-compose.yml  mcp.json.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  provider_issue.md
.github/workflows/: ci.yml  install-test.yml
backend/: api_push.py  api_scheduler.py  api_settings.py  ask_user_question.py  auth.py  chat.py  codex_openai_proxy.py  endpoints.py  files.py  jsonl_cleanup.py  main.py  permission_request.py  presence.py  prompts.py  push.py  scheduler.py  session_title_llm.py  sessions.py  settings.py
docs/: README.md  README_zh.md  add-provider.md  add-provider_zh.md  architecture.md  architecture_zh.md  backend-files.md  backend-files_zh.md  backend-security.md  backend-security_zh.md  backend-sessions.md  backend-sessions_zh.md  codex-gateway.md  codex-gateway_zh.md  comparison.md  comparison_zh.md  configuration.md  configuration_zh.md  data-and-backup.md  data-and-backup_zh.md  frontend.md  frontend_zh.md  glossary.md  glossary_zh.md  infrastructure.md  infrastructure_zh.md  install-linux.md  install-linux_zh.md  install-macos.md  install-macos_zh.md  mobile.md  mobile_zh.md  muses.md  muses_zh.md  personalize-claude-md.md  personalize-claude-md_zh.md  providers.md  providers_zh.md  quickstart.md  quickstart_zh.md  (+11 more)
examples/: cli-proxy-muselab.config.yaml
frontend/: app.js  index.html  styles.css  sw.js
frontend/assets/: manifest.webmanifest
frontend/data/: constants.js
frontend/i18n/: index.js
promo/: index.html
scripts/: codex-quota-refresh.py  doctor.sh  dump-tool-catalog.py  fix-thinking-signatures.py  gen-pwa-icons.py  install-linux.sh  install-macos.sh  intake.sh  lint.sh  quick-install.sh  setup-https.sh  uninstall-linux.sh  uninstall-macos.sh  upgrade.sh  versions.env
scripts/templates/: com.muselab.plist.tmpl  default-CLAUDE.en.md  default-CLAUDE.md  muselab.service.tmpl
scripts/templates/archive-skeleton/archives/: README.en.md  README.md
scripts/templates/archive-skeleton/health/: README.en.md  README.md
scripts/templates/archive-skeleton/money/: README.en.md  README.md
scripts/templates/archive-skeleton/notes/: README.en.md  README.md
scripts/templates/archive-skeleton/people/: README.en.md  README.md
scripts/templates/archive-skeleton/work/: README.en.md  README.md
skills/: README.md
skills/citation-formatter/: SKILL.md
skills/code-reviewer/: SKILL.md
skills/csv-analyzer/: SKILL.md
skills/markdown-formatter/: SKILL.md
skills/meeting-notes/: SKILL.md
skills/mermaid-helper/: SKILL.md
skills/pptx/: SKILL.md
skills/summary-distiller/: SKILL.md
skills/task-decomposer/: SKILL.md
skills/translate/: SKILL.md
skills/web-search/: SKILL.md
tests/: conftest.py  test_ask_user_question.py  test_auth.py  test_chat_endpoints.py  test_chat_image_upload.py  test_chat_options.py  test_chat_queue.py  test_chat_stream.py  test_claude_auth.py  test_claude_md_detection.py  test_client_pool.py  test_codex_openai_proxy.py  test_codex_rate_limit.py  test_cost_dashboard.py  test_endpoints.py  test_files.py  test_frontend_lint.py  test_jsonl_cleanup.py  test_mcp_gate.py  test_permission_request.py  test_prompts.py  test_provider_editor.py  test_push.py  test_rate_limit.py  test_regressions.py  test_scheduler.py  test_sdk_truth.py  test_search.py  test_security.py  test_session_prompt.py  test_session_title_llm.py  test_sessions.py  test_settings.py  test_settings_mcp.py  test_settings_skills.py
tests/e2e/: README.md  conftest.py  test_chat_render_perf.py  test_multi_tab.py
